--- a/src/app/modules/benefit/vendor-plan/vendor-plan.component.html
+++ b/src/app/modules/benefit/vendor-plan/vendor-plan.component.html
@@ -107,7 +107,7 @@
                 <div class="form-group">
                     <label for="title">Name of Vendor</label>
                     <input type="text" class="form-control" placeholder="Enter title" id="name" #name="ngModel"
-                        name="name" [(ngModel)]=" AddVendor.name" required>
+                        name="name" [(ngModel)]="AddVendor.name" required>
 
                     <div *ngIf="name.invalid && (name.dirty || name.touched)" class="error">
                         <div *ngIf="name.errors.required">name is required</div>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="form-group">
                     <label for="title">Phone number</label>
-                    <input type="number" class="form-control" placeholder="Enter phoneNumber" id="phoneNumber"
+                    <input type="text" class="form-control" placeholder="Enter phoneNumber" id="phoneNumber"
                         #phoneNumber="ngModel" name="phoneNumber" [(ngModel)]="AddVendor.phoneNumber" required>
 
                     <div *ngIf="phoneNumber.invalid && (phoneNumber.dirty || phoneNumber.touched)" class="error">
@@ -124,6 +124,8 @@
                     </div>
 
                 </div>
+
+
                 <div class="form-group">
                     <label for="title">Email</label>
                     <input type="email" class="form-control" placeholder="Enter Email" id="phoneNumber" #email="ngModel"
@@ -141,16 +143,16 @@
                     <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Benefit
                         Type</label>
                     <div class="col-sm-8">
-                        <!-- <select placeholder="Select Gender" class="form-control" name="benefitTypeID" id="benefitTypeID"
-                            #benefitTypeID="ngModel" [(ngModel)]="AddVendor.benefitTypeID">
+                         <select placeholder="Select Gender" class="form-control" name="benefitTypeId" id="benefitTypeId"
+                            #benefitTypeId="ngModel" [(ngModel)]="AddVendor.benefitTypeId">
                             <option value="">--Select Event---</option>
                             <option *ngFor="let benefit of Benefit" [value]="benefit.id">{{benefit.text}}</option>
                         </select>
 
-                        <div *ngIf="benefitTypeID.invalid && (benefitTypeID.dirty || benefitTypeID.touched)"
+                        <div *ngIf="benefitTypeId.invalid && (benefitTypeId.dirty || benefitTypeId.touched)"
                             class="error">
-                            <div *ngIf="benefitTypeID.errors.required">benefitTypeID is required</div>
-                        </div> -->
+                            <div *ngIf="benefitTypeId.errors.required">benefitType is required</div>
+                        </div> 
                     </div>
                 </div>
                 <div class="form-group">
@@ -238,7 +240,7 @@
                         <select placeholder="Select Gender" class="form-control" name="vendorId" id="vendorId"
                             #vendorId="ngModel" [(ngModel)]="AddVendorPlan.vendorId">
                             <option value="">--Select Vendor---</option>
-                            <option *ngFor="let evo of Vendora" [value]="evo.benefitTypeID">{{evo.name}}</option> -->
+                            <option *ngFor="let evo of AllVendors" [value]="evo.id">{{evo.name}}</option> -->
                         </select>
 
                         <div *ngIf="vendorId.invalid && (vendorId.dirty || vendorId.touched)" class="error">
@@ -271,4 +273,48 @@
         </form>
 
     </div>
+</ngx-side-modal>
+
+
+<!-- modal for benefit create -->
+<ngx-side-modal [(show)]='showBenefit' style="width: 500px;">
+    <div modal-header style="font-size: larger; font-weight: bold;">
+        <span></span>
+    </div>
+    <div modal-body>
+
+        <form action="/action_page.php" #EventForm="ngForm" name="EventForm" id="EventForm">
+            <!-- <h6 style="border: 10px  #CCC; background-color: #F5F5FA; font-size: small; padding: 15px; width: 300px;
+          margin-left: 10px;">create new events</h6> -->
+            <div style="margin: 20px;">
+                <div class="form-group">
+                    <label for="title">Type of Benefit</label>
+                    <input type="text" class="form-control" placeholder="Enter name of plan" id="name" #name="ngModel"
+                        name="name" [(ngModel)]="  AddBenefit.name" required>
+
+                    <div *ngIf="name.invalid && (name.dirty || name.touched)" class="error">
+                        <div *ngIf="name.errors.required">name is required</div>
+                    </div>
+
+                </div>
+            </div>
+
+
+
+
+
+        </form>
+
+    </div>
+
+    
+    <div modal-actions class="d-flex" style="margin-top: 2px; margin-bottom: 3px;">
+        <button *ngIf="submitbtnPressed" nbButton status="primary" class="d-flex column"><i
+            class="fa fa-spin fa-spinner"></i>&nbsp;Processing ...</button>
+        <button *ngIf="!submitbtnPressed" nbButton status="primary" class="d-flex column" [disabled]="!disabled"
+          (click)="SubmitBenefitType()">Submit</button>
+
+
+      </div>
+
 </ngx-side-modal>
